--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,22 @@
     margin: 0;
     padding: 0;
 }
-div {
+div, ol, li {
     border: 1px solid black;
 }
 /* container styles */
 .container {
     display: grid;
     height: 100vh;
-    /* grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr); */
 }
 /* header styles */
 .header {
     background-color: rgb(74, 112, 112);
     grid-column: 2 / 7;
+
+    /* inner grid */
+    display: grid;
+    grid-template-columns: 3fr 2fr;
 
 }
 /* sidebar styles */
@@ -23,9 +25,43 @@ div {
     background-color: aqua;
     grid-row: 1 / 7;
 }
+.dash {
+    display: grid;
+    height: 60%;
+    grid-template-rows: repeat(14, 1fr);
+    align-items: center;
+}
+.dashboard {
+    grid-row: 1 / 3;
+    font-size: 1.8rem;
+    margin-top: 20px;;
+}
+.empty {
+    grid-row: span 3;
+}
+.item {
+    padding: 15px;
+    padding-left: 30px;
+}
 /* main-content styles */
 .main-content {
     background-color: rgb(75, 141, 83);
     grid-column: 2 / 7;
     grid-row: 2 / 7;
+
+    /* inner grid */
+    display: grid;
+    grid-template-columns: repeat(2, 2fr) 1.5fr;
+    grid-template-rows: .5fr repeat(3, 1fr);
+}
+.title {
+    grid-column: span 2;
+}
+.content-sidebar {
+   grid-column: 3 / 4;
+   grid-row: 1 / 5;
+
+   /* inner grid */
+   display: grid;
+   grid-template-rows: .79fr 2fr .79fr 2fr;
 }
