--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,170 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+body {
+    box-sizing: border-box;
 }
 div, ol, li {
     border: 1px solid black;
 }
-/* container styles */
+/* container styles ************************************************************************/
 .container {
     display: grid;
     height: 100vh;
 }
-/* header styles */
+/* header styles ************************************************************************/
 .header {
     background-color: rgb(74, 112, 112);
-    grid-column: 2 / 7;
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
 
     /* inner grid */
     display: grid;
-    grid-template-columns: 3fr 2fr;
-
+    grid-template-columns: minmax(100px,3fr) minmax(200px,2fr);
 }
-/* sidebar styles */
+.search-bar {
+    display: grid;
+    grid-template-columns: 1fr 6fr; 
+}
+#search {
+    grid-column: 2 / 3;
+    height: fit-content;
+    align-self: center;
+    width: 100%;
+}
+.header-profile {
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr 1fr;
+    gap: 20px;
+    padding-left: 10px;
+}
+.profile-bar {
+    align-self: center;
+    height: fit-content; 
+}
+.greeting {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+}
+.big-picture {
+    grid-row: 1 / 3;
+}
+.big-name {
+}
+.welcome-message {
+}
+.button-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.header-button {
+    align-self: center;
+    height: 50%;
+    width: 75px;
+} 
+/* sidebar styles ************************************************************************/
 .sidebar {
     background-color: aqua;
-    grid-row: 1 / 7;
-}
-.dash {
-    display: grid;
-    height: 60%;
-    grid-template-rows: repeat(14, 1fr);
-    align-items: center;
+    grid-row: 1 / 5; 
 }
 .dashboard {
+    display: grid;
+    height: 55%;
+    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: minmax(100px, 300px);
+    align-items: center;
+    list-style-type: none;
+    width: 100%;
+}
+.dash-dashboard {
     grid-row: 1 / 3;
     font-size: 1.8rem;
     margin-top: 20px;;
 }
-.empty {
+.dash-empty {
     grid-row: span 3;
-}
-.item {
+}  
+.dash-item {
     padding: 15px;
-    padding-left: 30px;
+    padding-left: 35px;
+    margin-left: 10px;
 }
-/* main-content styles */
-.main-content {
+/* main-content styles ************************************************************************/
+.content {
     background-color: rgb(75, 141, 83);
-    grid-column: 2 / 7;
-    grid-row: 2 / 7;
+    grid-column: 2 / 5;
+    grid-row: 2 / 5;
 
     /* inner grid */
     display: grid;
-    grid-template-columns: repeat(2, 2fr) 1.5fr;
-    grid-template-rows: .5fr repeat(3, 1fr);
+    grid-template-columns: 3fr minmax(150px, 1.2fr);
 }
-.title {
-    grid-column: span 2;
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: .3fr repeat(3, 1fr);
+    grid-auto-rows: auto;
 }
-.content-sidebar {
-   grid-column: 3 / 4;
-   grid-row: 1 / 5;
+.cards-title {
+    grid-column: 1 / 3;
+}
+.card {
+    display: grid;
+    grid-template-rows: 2fr .5fr;;
 
+}
+.card-text {
+    padding-right: 10%;
+}
+.icons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 50%;
+}
+
+.content-sidebar {
    /* inner grid */
    display: grid;
-   grid-template-rows: .79fr 2fr .79fr 2fr;
+   grid-template-rows: 50px 1fr 50px 1fr;
 }
+.content-sidebar-title {
+    align-self: last baseline;
+}
+.announcements,.trending {
+    display: grid;
+    grid-template-rows: repeat(3,1fr);
+    grid-auto-rows: 1fr;
+}
+.trend {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+@media all and (max-width: 800px) {
+    .dashboard{
+        grid-template-rows: repeat(17, 30px);
+        height: 25%;
+    }
+    .dash-dashboard {
+        font-size: 1.1rem;
+    }
+    .dash-item {
+        padding: 10px;
+    }
+    .header-button {
+        width: 50px;
+    }
+    .cards-title {
+        grid-column: 1 / 2;
+    }
+    .card-container {
+        grid-template-columns: minmax(225px,1fr);
+        grid-template-rows: .4fr repeat(6, 1fr);
+    }
+    .content-sidebar {
+        grid-template-rows: 25px 1fr 25px 1fr;
+     }
+  }
