--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,20 @@
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 350;
+    font-style: normal;
 }
-body {
-    box-sizing: border-box;
-}
-div, ol, li {
-    border: 1px solid black;
+:root {
+    --dark: #3287ff;
+    --medium: #94a3b8;
+    --light: whitesmoke;
 }
 /* container styles ************************************************************************/
 .container {
@@ -16,7 +23,7 @@ div, ol, li {
 }
 /* header styles ************************************************************************/
 .header {
-    background-color: rgb(74, 112, 112);
+    background-color: var(--light);
     grid-column: 2 / 5;
     grid-row: 1 / 2;
 
@@ -28,17 +35,40 @@ div, ol, li {
     display: grid;
     grid-template-columns: 1fr 6fr; 
 }
+.search-icon {
+    max-width: 30%;
+    min-width: 25px;
+    justify-self: end;
+    align-self: center;
+}
 #search {
     grid-column: 2 / 3;
     height: fit-content;
     align-self: center;
     width: 100%;
+    border-radius: 25px;
+    padding: 10px;
 }
 .header-profile {
     display: grid;
     grid-template-columns: 1fr 1fr 2fr 1fr;
     gap: 20px;
-    padding-left: 10px;
+    padding-left: 25%;
+}
+.header-icon {
+    max-width: 50%;
+    min-width: 30px;
+    justify-self: end;
+    align-self: center;
+}
+.small-picture {
+    max-width: 90%;
+    min-width: 50px;
+    border-radius: 100%;
+}
+.small-name {
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 .profile-bar {
     align-self: center;
@@ -46,28 +76,44 @@ div, ol, li {
 }
 .greeting {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: .75fr 2fr;
+    grid-template-rows: minmax(50px, 55px) minmax(50px,55px);
 }
 .big-picture {
     grid-row: 1 / 3;
+    max-height:100%;
+    border-radius: 100%;
+    justify-self: center;
+    align-self: center;
 }
 .big-name {
+    font-size: 1.8rem;
+    font-weight: 800;
 }
 .welcome-message {
+    font-weight: 800;
+    align-self: center;
 }
 .button-container {
+    width: 75%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    padding-left: 10%;
+    gap: 10%;
 }
 .header-button {
     align-self: center;
-    height: 50%;
-    width: 75px;
+    height: 40%;
+    width: 100px;
+    background-color: var(--dark);
+    color: var(--light);
+    border-radius: 100px;
+    font-size: 1.2rem;
 } 
 /* sidebar styles ************************************************************************/
 .sidebar {
-    background-color: aqua;
+    background-color: var(--dark);
+    color: var(--light);
     grid-row: 1 / 5; 
 }
 .dashboard {
@@ -82,47 +128,81 @@ div, ol, li {
 .dash-dashboard {
     grid-row: 1 / 3;
     font-size: 1.8rem;
-    margin-top: 20px;;
+    margin-top: 20px;
+}
+.dash-word {
+    font-size: 1.8rem;
 }
 .dash-empty {
     grid-row: span 3;
 }  
 .dash-item {
     padding: 15px;
-    padding-left: 35px;
-    margin-left: 10px;
+    font-size: 1.1rem;
+    font-weight: 600;
+
+    /* inner grid */
+    display: grid;
+    grid-template-columns: .35fr 1fr;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+
+}
+.dash-icon {
+    max-width: 60%;
+    justify-self: end;
 }
 /* main-content styles ************************************************************************/
 .content {
-    background-color: rgb(75, 141, 83);
+    background-color: var(--medium);
     grid-column: 2 / 5;
     grid-row: 2 / 5;
+    padding-bottom: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
 
     /* inner grid */
     display: grid;
     grid-template-columns: 3fr minmax(150px, 1.2fr);
+    gap: 20px;
 }
 .card-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: .3fr repeat(3, 1fr);
     grid-auto-rows: auto;
+    gap: 20px;
 }
 .cards-title {
     grid-column: 1 / 3;
 }
 .card {
+    background-color: var(--light);
     display: grid;
-    grid-template-rows: 2fr .5fr;;
+    grid-template-rows: 2fr .5fr;
+    border-bottom: 5px solid coral;
+    box-shadow:  10px 10px 8px #888888;
+    border-radius: 3%;
 
 }
 .card-text {
-    padding-right: 10%;
+    align-content: center;
+    padding-left: 20px;
+    padding-right: 30px;
+}
+.card-title {
+    font-size: 1.4rem;
+    font-weight: 700;
 }
 .icons {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin-left: 50%;
+}
+.svg-icon {
+    max-width: 60%;
+    max-height: 60%;
 }
 
 .content-sidebar {
@@ -130,23 +210,49 @@ div, ol, li {
    display: grid;
    grid-template-rows: 50px 1fr 50px 1fr;
 }
-.content-sidebar-title {
+.content-sidebar-title, .cards-title {
     align-self: last baseline;
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+.content-sidebar-title {
+    padding-bottom: 15px;
 }
 .announcements,.trending {
+    background-color: var(--light);
     display: grid;
     grid-template-rows: repeat(3,1fr);
     grid-auto-rows: 1fr;
+    align-content: center;
+    padding-left: 10px;
+    padding-right: 25px;
+    padding-top: 25px;
+    box-shadow:  10px 10px 8px #888888;
+    border-radius: 3%;
+}
+.trending {
+    padding-left: 1px;
+}
+.announcement-title {
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+.announcement {
+    border-top: 1px solid black;
 }
 .trend {
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
-
-@media all and (max-width: 800px) {
+.trend-icon {
+    max-width: 60px;
+    justify-self: center;
+    border-radius: 100px;
+}
+@media all and (max-width: 900px) {
     .dashboard{
-        grid-template-rows: repeat(17, 30px);
         height: 25%;
+        padding-right: 25px;
     }
     .dash-dashboard {
         font-size: 1.1rem;
@@ -154,8 +260,17 @@ div, ol, li {
     .dash-item {
         padding: 10px;
     }
+    .dash-icon {
+        max-width: 0; 
+    } 
     .header-button {
         width: 50px;
+        font-size: .75rem;
+    }
+    .button-container {
+        width: 75%;
+        padding-left: 0;
+        gap: 0;
     }
     .cards-title {
         grid-column: 1 / 2;
@@ -165,6 +280,18 @@ div, ol, li {
         grid-template-rows: .4fr repeat(6, 1fr);
     }
     .content-sidebar {
-        grid-template-rows: 25px 1fr 25px 1fr;
+        grid-template-rows: 40px 500px 40px 500px;
      }
+     .content-sidebar-title {
+        padding-bottom: 1px;
+    }
+    .header-profile {
+        padding-left: 1%;
+        gap: 0;
+    }
+    .greeting {
+        display: grid;
+        grid-template-columns: 0fr 0fr;
+        grid-template-rows: 0fr 0fr;
+    }
   }
