--- a/styles.css
+++ b/styles.css
@@ -2,296 +2,292 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto Condensed", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 350;
-    font-style: normal;
-}
+/* global variables */
 :root {
     --dark: #3287ff;
     --medium: #94a3b8;
     --light: whitesmoke;
 }
-/* container styles ************************************************************************/
-.container {
-    display: grid;
-    height: 100vh;
+/* CSS reset */
+*, *::before, *::after {
+    box-sizing: border-box;
 }
-/* header styles ************************************************************************/
+* {
+    margin: 0;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 350;
+    font-style: normal;
+}
+img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+}
+input, button, textarea, select {
+    font: inherit;
+}
+p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+    hyphens: auto;
+}
+img {
+    width: 50px;
+    min-width: 20px;
+}
+/* grid-container */
+.grid-container {
+    display: grid;
+    min-height: 100vh;
+    min-height: 100dvh;
+    grid-template: minmax(150px, 200px) 3fr / .6fr 3fr;
+    background-color: bisque;
+}
+/* header */
 .header {
     background-color: var(--light);
-    grid-column: 2 / 5;
-    grid-row: 1 / 2;
+    grid-column: 2 / 3;
 
     /* inner grid */
-    display: grid;
-    grid-template-columns: minmax(100px,3fr) minmax(200px,2fr);
+    display: grid; 
+    grid-template: 1fr 1fr/ 2fr 1.3fr;
 }
 .search-bar {
     display: grid;
-    grid-template-columns: 1fr 6fr; 
-}
-.search-icon {
-    max-width: 30%;
-    min-width: 25px;
-    justify-self: end;
-    align-self: center;
-}
-#search {
-    grid-column: 2 / 3;
-    height: fit-content;
-    align-self: center;
-    width: 100%;
-    border-radius: 25px;
+    grid-template-columns: 1fr 6fr;
+    align-items: center;
     padding: 10px;
 }
-.header-profile {
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr 1fr;
-    gap: 20px;
-    padding-left: 25%;
+#search {
+    height: 30px;
+    background-color: var(--medium);
+    border-radius: 15px;
+    padding: 5px;
 }
-.header-icon {
-    max-width: 50%;
-    min-width: 30px;
+.search-icon {
+    width: 30px;
+    min-width: 25px;
+    min-height: 30px;
     justify-self: end;
-    align-self: center;
-}
-.small-picture {
-    max-width: 90%;
-    min-width: 50px;
-    border-radius: 100%;
-}
-.small-name {
-    font-size: 1.2rem;
-    font-weight: 600;
-}
-.profile-bar {
-    align-self: center;
-    height: fit-content; 
 }
 .greeting {
     display: grid;
-    grid-template-columns: .75fr 2fr;
-    grid-template-rows: minmax(50px, 55px) minmax(50px,55px);
-}
-.big-picture {
-    grid-row: 1 / 3;
-    max-height:100%;
-    border-radius: 100%;
-    justify-self: center;
-    align-self: center;
-}
-.big-name {
-    font-size: 1.8rem;
-    font-weight: 800;
-}
-.welcome-message {
-    font-weight: 800;
-    align-self: center;
-}
-.button-container {
-    width: 75%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    padding-left: 10%;
-    gap: 10%;
-}
-.header-button {
-    align-self: center;
-    height: 40%;
-    width: 100px;
-    background-color: var(--dark);
-    color: var(--light);
-    border-radius: 100px;
-    font-size: 1.2rem;
-} 
-/* sidebar styles ************************************************************************/
-.sidebar {
-    background-color: var(--dark);
-    color: var(--light);
-    grid-row: 1 / 5; 
-}
-.dashboard {
-    display: grid;
-    height: 55%;
-    grid-template-rows: repeat(12, 1fr);
-    grid-template-columns: minmax(100px, 300px);
+    grid-template-columns: 1fr 6fr;
     align-items: center;
-    list-style-type: none;
-    width: 100%;
+    padding: 10px;
 }
-.dash-dashboard {
-    grid-row: 1 / 3;
-    font-size: 1.8rem;
-    margin-top: 20px;
-}
-.dash-word {
-    font-size: 1.8rem;
-}
-.dash-empty {
-    grid-row: span 3;
-}  
-.dash-item {
-    padding: 15px;
-    font-size: 1.1rem;
-    font-weight: 600;
-
-    /* inner grid */
-    display: grid;
-    grid-template-columns: .35fr 1fr;
-    align-items: center;
-    justify-content: start;
-    gap: 10px;
-
-}
-.dash-icon {
-    max-width: 60%;
+.greeting-picture {
+    width: 80px;
+    min-width: 50px;
+    min-height: 50px;
+    border-radius: 50%;
     justify-self: end;
 }
-/* main-content styles ************************************************************************/
+.message {
+    display: grid; 
+    grid-template-rows: 1fr 2fr;
+}
+.big-name {
+    align-self: flex-end;
+    font-size: 1.5rem;
+}
+.header-profile {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(20px, 75px));
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    gap: 10px;
+}
+.small-picture {
+    border-radius: 25px;
+}
+.header-icon {
+    width: 30px;
+}
+.button-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20px, 120px));
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+}
+.header-button {
+    width: 90px;
+    border-radius: 45px;
+    background-color: var(--dark);
+    color: var(--light);
+}
+/* sidebar */
+.sidebar{
+    grid-row: 1 / 3;
+    background-color: var(--dark);
+    border-right: 2px solid black;
+}
+.dashboard {
+    height: 100%;
+    padding: 8px;
+    padding-left: 25px;
+    list-style-type: none;
+}
+.dash-item > a {
+    display: grid;
+    grid-template-columns: .5fr 3fr;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+    gap: 10px;
+    color: var(--light);
+    font-size: 1.2rem;
+}
+a > .top {
+    width: 70px;
+    font-size: 1.5rem;
+}
+a > span {
+    justify-self: start;
+}
+.dash-icon {
+    width: 50px;
+    min-width: 35px;
+    filter: invert(99%) sepia(5%) saturate(266%) hue-rotate(282deg) brightness(116%) contrast(92%);
+}
+/* content */
 .content {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
     background-color: var(--medium);
-    grid-column: 2 / 5;
-    grid-row: 2 / 5;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    padding-left: 20px;
+    border-top: 2px solid black;
 
     /* inner grid */
     display: grid;
-    grid-template-columns: 3fr minmax(150px, 1.2fr);
-    gap: 20px;
+    grid-template-columns: 3fr 1.5fr;
+}
+.content-projects {
+    grid-column: 1 / 2;
+    border-right: 5px solid var(--dark);
 }
 .card-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: .3fr repeat(3, 1fr);
-    grid-auto-rows: auto;
-    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: minmax(150px, 200px);
+    justify-content: center;
+    gap: 1.5rem;
+    padding: 30px;
+    overflow: auto;
+    max-height: 750px;
 }
 .cards-title {
-    grid-column: 1 / 3;
+    padding: 15px;
 }
 .card {
-    background-color: var(--light);
     display: grid;
-    grid-template-rows: 2fr .5fr;
-    border-bottom: 5px solid coral;
-    box-shadow:  10px 10px 8px #888888;
-    border-radius: 3%;
-
+    grid-template-rows: repeat(2,auto);
+    border-radius: 15px;
+    background-color: var(--light);
+    border-left: 5px solid salmon;
 }
 .card-text {
-    align-content: center;
-    padding-left: 20px;
-    padding-right: 30px;
+    padding: 10px;
 }
 .card-title {
-    font-size: 1.4rem;
-    font-weight: 700;
+    font-weight: bolder;
 }
 .icons {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin-left: 50%;
-}
-.svg-icon {
-    max-width: 60%;
-    max-height: 60%;
+    grid-template-columns: repeat(3,30px);
+    justify-content: end;
+    gap: 8px;
+    padding: 10px;
 }
 
 .content-sidebar {
-   /* inner grid */
-   display: grid;
-   grid-template-rows: 50px 1fr 50px 1fr;
-}
-.content-sidebar-title, .cards-title {
-    align-self: last baseline;
-    font-size: 1.4rem;
-    font-weight: 700;
+    display: grid;
+    grid-template-rows: repeat(2,auto);
+    max-height: 700px;
+    justify-content: center;
 }
 .content-sidebar-title {
-    padding-bottom: 15px;
+    padding: 15px;
 }
-.announcements,.trending {
-    background-color: var(--light);
+.announcements-container, .trending-container {
     display: grid;
-    grid-template-rows: repeat(3,1fr);
-    grid-auto-rows: 1fr;
-    align-content: center;
-    padding-left: 10px;
-    padding-right: 25px;
-    padding-top: 25px;
-    box-shadow:  10px 10px 8px #888888;
-    border-radius: 3%;
-}
-.trending {
-    padding-left: 1px;
-}
-.announcement-title {
-    font-size: 1.2rem;
-    font-weight: 700;
+    grid-template-columns: minmax(150px, 285px);
+    grid-template-rows: repeat(auto-fit, auto);
+    justify-content: center;
+    gap: 15px;
+    background-color: var(--light);
+    border-radius: 15px;
+    padding: 15px;
 }
 .announcement {
-    border-top: 1px solid black;
+    border-bottom: 5px solid salmon;
+    padding: 5px;
+}
+.announcement-title, .trend-title {
+    font-weight: bolder;
 }
 .trend {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: .5fr 2fr;
+    grid-template-rows: repeat(auto-fit, auto);
+    border-bottom: 5px solid salmon;
+    padding: 5px;
+
 }
-.trend-icon {
-    max-width: 60px;
-    justify-self: center;
-    border-radius: 100px;
+h3 {
+    font-weight: bold;
+    font-size: 1.5rem;
 }
-@media all and (max-width: 900px) {
-    .dashboard{
-        height: 25%;
-        padding-right: 25px;
-    }
-    .dash-dashboard {
-        font-size: 1.1rem;
-    }
-    .dash-item {
-        padding: 10px;
-    }
-    .dash-icon {
-        max-width: 0; 
-    } 
-    .header-button {
-        width: 50px;
-        font-size: .75rem;
-    }
-    .button-container {
-        width: 75%;
-        padding-left: 0;
-        gap: 0;
-    }
-    .cards-title {
-        grid-column: 1 / 2;
-    }
-    .card-container {
-        grid-template-columns: minmax(225px,1fr);
-        grid-template-rows: .4fr repeat(6, 1fr);
-    }
-    .content-sidebar {
-        grid-template-rows: 40px 500px 40px 500px;
-     }
-     .content-sidebar-title {
-        padding-bottom: 1px;
+
+/* media queries */
+@media screen and (max-width: 600px) {
+    a > span {
+        display: none;
     }
     .header-profile {
-        padding-left: 1%;
-        gap: 0;
+        grid-template-rows: 30px 30px;
+        grid-template-columns: repeat(2, minmax(20px, 25px));
+        align-content: center;
     }
-    .greeting {
+    .small-name {
+        grid-row: 1 / 2 ;
+        grid-column: 1 / 3;
+    }
+    .header-profile > img, .small-picture {
+        width: 20px;
+    }
+    .header-button {
+        width: 65px;
+        border-radius: 45px;
+    }
+
+}
+@media screen and (max-width: 850px) {
+    .content {
+        /* inner grid */
         display: grid;
-        grid-template-columns: 0fr 0fr;
-        grid-template-rows: 0fr 0fr;
+        grid-template-rows: 175px 4fr;
+        grid-template-columns: 1fr;
     }
-  }
+    .card-container {
+        max-height: 600px;
+    }
+    .content-sidebar {
+        grid-row: 1 / 2;
+        grid-template-columns: repeat(2, auto);
+        overflow: auto;
+        gap: 10px;
+    }
+    .announcements-container, .trending-container {
+        display: grid;
+        grid-template-columns: minmax(150px, auto);
+        grid-auto-rows: auto;
+        justify-content: center;
+        gap: 15px;
+    }
+    .content-projects {
+        border-top: 5px solid var(--dark);
+        border-right: none;
+    }
+    
+}
