--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 /* global variables */
 :root {
     --dark: #3287ff;
-    --medium: #94a3b8;
+    --medium: #acb7c6;
     --light: whitesmoke;
 }
 /* CSS reset */
@@ -136,6 +136,7 @@ img {
     justify-items: center;
     align-content: center;
     gap: 10px;
+    padding: 5px;
     color: var(--light);
     font-size: 1.2rem;
 }
@@ -169,7 +170,7 @@ a > span {
 .card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-auto-rows: minmax(150px, 200px);
+    grid-auto-rows: minmax(175px, 225px);
     justify-content: center;
     gap: 1.5rem;
     padding: 30px;
